--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,42 @@
-# Dependencies
-node_modules/
-.pnp/
-.pnp.js
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Testing
-coverage/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Production
-build/
-dist/
-out/
+# testing
+/coverage
 
-# Misc
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
-# Debug logs
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+# env files (can opt-in for committing if needed)
+.env*
+.env.local
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-.env/
-.venv/
-.eggs/
-*.egg-info/ 
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
